Resolves: tdf#166613 wrong selection returned from forms listbox editor

Change-Id: I14e51eb1945d282691275f394bfbac50f3c4cc48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185666
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins